[package]
name = "tls-forward-proxy"
version = "0.1.0"
authors = ["Mahdi Dibaiee <mdibaiee@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1", features = ["full"] }
tokio = { git = "https://github.com/conblem/tokio", branch = "bidi_copy", features = ["full"] }
httparse = "1.3.4"
