[package]
name = "tlsproxy"
version = "0.1.0"
authors = ["Mahdi Dibaiee <mdibaiee@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
tokio = { version = "1", features = ["full"] }
httparse = "1.3.4"
futures = "0.3.13"
rustls = { version = "0.19.0", features = ["dangerous_configuration", "logging"] }
webpki = "0.21.4"
webpki-roots = "0.21.0"
rustls-pemfile = "0.2.0"
clap = "2.33.3"
